style.css
body {
    font-family: Arial;
    /* Allows height/width to be padding / borders / content sizing together */
    box-sizing: border-box;
}

.main {
    background-color: #f7f8f9;
    border-color: #569bf1;
    border-style: solid;
    border-width: 2px;
    overflow: auto;
}

.header {
    color: white;
    background-color: #316cd9;
    overflow: auto;
}

#headerTitle {
    margin-top: 0.2cm;
    margin-bottom: 0;
}

.headerBackButton {
    float: left;
    padding: 0.2cm;
    margin-right: 0.2cm;
    background-color: #295cb9;
}

.pageContent {
    display: flex;
}

.navBar {
    width: 250px;
    color: #8c9199;
    background-color: white;
    border-style: solid;
    border-width: 0 2px 0 0;
    border-color: #e8eaeb;
}

.contentContainer {
    /* Allows this flex child to fill up remaining width of containing box */
    flex: 1;
}

.navBarButton {
    padding: 0.25cm;
}

.navBarButton:hover {
    background-color: #f7f8f9;
}

.subHeader {
    padding-left: 0.5cm;
    padding-right: 0.5cm;
    padding-top: 2em;
    padding-bottom: 2em;
    background-color: #ffffff;
    /*box-shadow: 0 4px 4px gray;*/
}

h3 {
    display: inline;
    /*flex-direction: row;*/
    /*margin-left: 0.5cm;*/
    margin-top: 0;
    margin-bottom: 0;
}

#saveInfo {
    display: flex;
    flex-direction: row-reverse;
    align-items: baseline;
}

#lastSave {
    margin: 0 0.3cm 0 0;
}

#savePageButton {
    background-color: #dadcde;
    border-radius: 5px;
    padding: 0.2cm 0.3cm;
}

.card {
    background-color: white;
    border-radius: 8px;
    border-style: solid;
    border-width: 2px;
    border-color: #e8eaeb;
    margin: 0.75cm 0.5cm;
    padding: 1cm 0.5cm;
}

